--- a/swr-qiitaaip/styles/Home.module.css
+++ b/swr-qiitaaip/styles/Home.module.css
@@ -5,16 +5,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+}
+
+.header {
+  margin-top: 50px;
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
 }
 
 .footer {
